refactor package structure and update application name to Icar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=vroomvroomcar
+spring.application.name=icar
 
 spring.security.user.name=user
 spring.security.user.password=password
