--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-resource-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.3.3</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -160,4 +165,3 @@
     </build>
 
 </project>
-
