feat: add example environment variables and update application properties for configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.application.name=icar
+spring.application.name=${SPRING_APPLICATION_NAME:icar}
 
-spring.security.user.name=user
-spring.security.user.password=password
+spring.security.user.name=${SPRING_SECURITY_USER_NAME:user}
+spring.security.user.password=${SPRING_SECURITY_USER_PASSWORD:password}
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
-spring.sql.init.platform=h2
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:testdb}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.h2.Driver}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
+
+spring.h2.console.enabled=${SPRING_H2_CONSOLE_ENABLED:true}
+spring.sql.init.platform=${SPRING_SQL_INIT_PLATFORM:h2}
