feat: update database configuration to use MariaDB and add MySQL connector dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,13 @@ spring.application.name=${SPRING_APPLICATION_NAME:icar}
 spring.security.user.name=${SPRING_SECURITY_USER_NAME:user}
 spring.security.user.password=${SPRING_SECURITY_USER_PASSWORD:password}
 
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:testdb}
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.h2.Driver}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mariadb://82.165.152.149:3307/2025-D02-groupe2}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.mariadb.jdbc.Driver}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:main2}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:9TU;4u?c}
 
 spring.h2.console.enabled=${SPRING_H2_CONSOLE_ENABLED:true}
 spring.sql.init.platform=${SPRING_SQL_INIT_PLATFORM:h2}
+
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.MariaDBDialect}
+spring.jpa.hibernate.ddl-auto=update
