--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
             <version>4.10.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
